Improve tests for visually hidden helper

--- a/test/manual/index.html
+++ b/test/manual/index.html
@@ -32,7 +32,10 @@
 		<h3 class="Test-it">should provide necessary styling</h3>
 		<div class="Test-run">
 			<span class="u-hiddenVisually">jackie</span>
-			<button type="button" class="u-hiddenVisually is-focusable">jackie</button>
+			<button type="button" class="u-hiddenVisually">jackie</button>
+			<div class="u-hiddenVisually">
+				<button type="button">jackie, inside</button>
+			</div>
 		</div>
 
 		<h2 class="Test-describe">.u-cf</h2>
