Improve image replacement helper

--- a/test/manual/index.html
+++ b/test/manual/index.html
@@ -13,7 +13,7 @@
 		<h2 class="Test-describe">.u-imageReplacement</h2>
 		<h3 class="Test-it">should provide necessary styling</h3>
 		<div class="Test-run">
-			<div class="u-imageReplacement">jackie</div>
+			<div class="u-imageReplacement">jackie<br>coco</div>lola
 		</div>
 
 		<h2 class="Test-describe">.u-hidden</h2>
